--- a/Fleet/Podfile
+++ b/Fleet/Podfile
@@ -4,7 +4,7 @@
 target 'Fleet' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'Firebase/Core'
   # Pods for Fleet
 
   target 'FleetTests' do
