--- a/Fleet/Podfile
+++ b/Fleet/Podfile
@@ -6,6 +6,7 @@ target 'Fleet' do
   use_frameworks!
   pod 'Firebase/Core'
   pod 'Firebase/Database'
+  pod 'Firebase/Auth'
   # Pods for Fleet
 
   target 'FleetTests' do
